add google font

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div class="container">
       <section class="first__section">
-        <h3>Simple, traffic-based pricing</h3>
+        <h1 class="header-text">Simple, traffic-based pricing</h1>
         <div id="first-text">
           <p>Sign-up for our 30-days trial.</p>
           <p>No credit card required.</p>
