Edit price tag structure

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <div class="line"></div>
         </div>
 
-        <h3 id="price-tag">$16.00<span>/ month</span></h3>
+        <h3 id="price-tag"><span class="price">$16.00</span><span>/ month</span></h3>
 
         <div id="billing__duration">
           <hp>Monthly Billing</hp>
           <div class="enabled-tag"><div class="enabled__btn"></div></div>
           <p>Yearly Billing</p>
-          <div id="discount-tag">
+          <div id="discount-tag" class="discount-tag--disabled">
             <span>-25%</span><span id="discount-title"> discount</span>
           </div>
         </div>
