--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <hp>Monthly Billing</hp>
           <div class="enabled-tag"><div class="enabled__btn"></div></div>
           <p>Yearly Billing</p>
-          <div id="discount-tag" class="discount-tag--disabled">
+          <div id="discount-tag" class="">
             <span>-25%</span><span id="discount-title"> discount</span>
           </div>
         </div>
