--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Traffic based pricing landing page">
+
 
     <link
       rel="icon"
@@ -25,24 +27,24 @@
     <title>Frontend Mentor | Interactive pricing component</title>
   </head>
   <body>
-    <div class="container">
-      <section class="first__section">
+    <main class="container">
+      <header class="first__section">
         <h1 class="header-text">Simple, traffic-based pricing</h1>
         <div id="first-text">
           <p>Sign-up for our 30-days trial.</p>
           <p>No credit card required.</p>
         </div>
-      </section>
+      </header>
 
-      <article class="second__section">
-        <h3 id="title">100K PAGEVIEWS</h3>
+      <section class="second__section">
+        <h1 id="title">100K PAGEVIEWS</h1>
 
-        <div class="range--box">
+        <label class="range--box">
           <input type="range" name="" id="range" />
           <div class="line"></div>
-        </div>
+        </label>
 
-        <h3 id="price-tag"><span class="price">$16.00</span><span>/ month</span></h3>
+        <h1 id="price-tag"><span class="price">$16.00</span><span>/ month</span></h1>
 
         <div id="billing__duration">
           <hp>Monthly Billing</hp>
@@ -71,7 +73,7 @@
 
           <button id="btn">Start my trial</button>
         </div>
-      </article>
-    </div>
+      </section>
+    </main>
   </body>
 </html>
