edit title tag on html file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script defer src="./script.js"></script>
 
-    <title>Frontend Mentor | Interactive pricing component</title>
+    <title>Interactive pricing component</title>
   </head>
   <body>
     <main class="container">
